--- a/index.html
+++ b/index.html
@@ -26,7 +26,99 @@
 </head>
 
 <body>
-    <h1>Tutor Website</h1>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="navbar-flex container">
+            <img src="images/logo.svg" alt="tutor-logo">
+
+            <div class="main-menu-items">
+                <ul class="main-menu-list">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+
+                    <li>
+                        <a href="#chapters">Chapters</a>
+                    </li>
+
+                    <li>
+                        <a href="#summary">Summary</a>
+                    </li>
+
+                    <li>
+                        <a href="#takeaways">Takeaways</a>
+                    </li>
+
+                    <li>
+                        <a href="#author">Author</a>
+                    </li>
+
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Mobile Menu -->
+            <div class="mobile-menu">
+                <div class="mobile-menu-toggle">
+                    <i class="fas fa-bars fa-2x"></i>
+                </div>
+
+                <div class="mobile-menu-items">
+                    <ul class="mobile-menu-list">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+
+                        <li>
+                            <a href="#chapters">Chapters</a>
+                        </li>
+
+                        <li>
+                            <a href="#summary">Summary</a>
+                        </li>
+
+                        <li>
+                            <a href="#takeaways">Takeaways</a>
+                        </li>
+
+                        <li>
+                            <a href="#author">Author</a>
+                        </li>
+
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <script src="js/script.js"></script>
 </body>
