--- a/index.html
+++ b/index.html
@@ -150,6 +150,94 @@
         </svg>
     </header>
 
+    <!-- Learn -->
+    <section class="learn">
+        <div class="container">
+            <div class="section-header">
+                <h2>What Will You Learn</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Embark on a journey of learning with our comperhensive video courses. Discover the secrets of
+                    successful video creation and enhance your skills.
+                </p>
+            </div>
+
+            <div class="topics">
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-1.jpg" alt="description-1-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Set Clear Objectives and Goals</h3>
+                    </div>
+                </div>
+
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-2.jpg" alt="description-2-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Plan Layout and Design Elements</h3>
+                    </div>
+                </div>
+
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-3.jpg" alt="description-3-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Sketch Creative Concepts</h3>
+                    </div>
+                </div>
+
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-4.jpg" alt="description-4-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Establish Strong Call-to-Actions</h3>
+                    </div>
+                </div>
+
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-5.jpg" alt="description-5-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Choose High Quality HTML Templates</h3>
+                    </div>
+                </div>
+
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-6.jpg" alt="description-6-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Create Impressive Layout Previews</h3>
+                    </div>
+                </div>
+
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-7.jpg" alt="description-7-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Master Landing Page Coding Techniques</h3>
+                    </div>
+                </div>
+
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-8.jpg" alt="description-8-image">
+                    </div>
+                    <div class="topic-text">
+                        <h3>Launch Your Project Successfully Online</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 
