feat: course details section created

--- a/index.html
+++ b/index.html
@@ -434,6 +434,22 @@
         </div>
     </section>
 
+    <!-- Course Details -->
+    <section class="details section" id="details">
+        <div class="details-flex container">
+            <img src="images/details.png" alt="">
+
+            <div class="details-content">
+                <h2>Course Details</h2>
+                <div class="heading-border"></div>
+                <p>Gain insight into the course curriculum, structure, and what to expect throughout your learning
+                    journey.</p>
+
+                <a href="#" class="btn">See Details</a>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 
