feat: author section created

--- a/index.html
+++ b/index.html
@@ -450,6 +450,38 @@
         </div>
     </section>
 
+    <!-- Author Information -->
+    <section class="details section" id="author">
+        <div class="details-flex container">
+            <img src="images/author.png" alt="author">
+
+            <div class="details-content">
+                <h2>Author Information</h2>
+
+                <div class="heading-border"></div>
+
+                <p>Learn about the author's background, expertise, and contributions to the course content.</p>
+
+                <ul>
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i> <strong>Experties:</strong> Lorem,
+                        ipsum dolor sit amet consectetur adipisicing elit. Nisi, sint.
+                    </li>
+
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i> <strong>Experience:</strong> Lorem,
+                        ipsum dolor sit amet consectetur adipisicing elit. Nisi, sint.
+                    </li>
+
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i> <strong>Skills:</strong> Lorem, ipsum
+                        dolor sit amet consectetur adipisicing elit. Nisi, sint.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 
