--- a/index.html
+++ b/index.html
@@ -515,6 +515,20 @@
         </div>
     </section>
 
+    <!-- Newsletter -->
+    <section class="newsletter section" id="newsletter">
+        <div class="newsletter-flex container">
+            <h2>Subscribe To Our Newsletter</h2>
+            <p>Stay updated with the latest news, offers, and insights from our platform. Join our newsletter community
+                today!</p>
+
+            <form action="#">
+                <input type="email" placeholder="Enter your email">
+                <button type="submit" class="btn">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 
