--- a/contact.html
+++ b/contact.html
@@ -27,30 +27,32 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
         <div class="navbar-flex container">
-            <img src="images/logo.svg" alt="tutor-logo">
+            <a href="#" aria-label="Logo Home Link">
+                <img src="images/logo.svg" alt="tutor-logo">
+            </a>
 
             <div class="main-menu-items">
                 <ul class="main-menu-list">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="#">Home</a>
                     </li>
 
                     <li>
-                        <a href="index.html#chapters">Chapters</a>
+                        <a href="#chapters">Chapters</a>
                     </li>
 
                     <li>
-                        <a href="index.html#summary">Summary</a>
+                        <a href="#summary">Summary</a>
                     </li>
 
                     <li>
-                        <a href="index.html#takeaways">Takeaways</a>
+                        <a href="#takeaways">Takeaways</a>
                     </li>
 
                     <li>
-                        <a href="index.html#author">Author</a>
+                        <a href="#author">Author</a>
                     </li>
 
                     <li>
@@ -58,13 +60,13 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="https://facebook.com" target="_blank" aria-label="Follow Us on Facebook">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="https://x.com" target="_blank" aria-label="Follow Us on Twitter">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
@@ -73,30 +75,31 @@
 
             <!-- Mobile Menu -->
             <div class="mobile-menu">
-                <div class="mobile-menu-toggle">
+                <div class="mobile-menu-toggle" role="button" aria-expanded="false" aria-controls="mobile-menu-items"
+                    aria-label="Open mobile menu" tabindex="0">
                     <i class="fas fa-bars fa-2x"></i>
                 </div>
 
                 <div class="mobile-menu-items">
                     <ul class="mobile-menu-list">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="#">Home</a>
                         </li>
 
                         <li>
-                            <a href="index.html#chapters">Chapters</a>
+                            <a href="#chapters">Chapters</a>
                         </li>
 
                         <li>
-                            <a href="index.html#summary">Summary</a>
+                            <a href="#summary">Summary</a>
                         </li>
 
                         <li>
-                            <a href="index.html#takeaways">Takeaways</a>
+                            <a href="#takeaways">Takeaways</a>
                         </li>
 
                         <li>
-                            <a href="index.html#author">Author</a>
+                            <a href="#author">Author</a>
                         </li>
 
                         <li>
@@ -104,13 +107,13 @@
                         </li>
 
                         <li>
-                            <a href="#">
+                            <a href="https://facebook.com" target="_blank" aria-label="Follow Us on Facebook">
                                 <i class="fa-brands fa-facebook"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
+                            <a href="https://x.com" target="_blank" aria-label="Follow Us on Twitter">
                                 <i class="fa-brands fa-twitter"></i>
                             </a>
                         </li>
