feat: formspree integrated

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png">
 
-    <title>Welcome to Tutor</title>
+    <title>Contact | Tutor</title>
 </head>
 
 <body>
@@ -136,11 +136,11 @@
             <p>We love to create dependable business solutions for small and medium companies. Email our office using
                 contact@website.com or call us by using +123-456-7890</p>
 
-            <form>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
+            <form action="https://formspree.io/f/xjkyrqvj" method="POST">
+                <input type="text" name="name" placeholder="Name">
+                <input type="email" name="email" placeholder="Email">
 
-                <textarea placeholder="Message"></textarea>
+                <textarea name="message" placeholder="Message"></textarea>
                 <button type="submit" value="Send Message" class="btn">Send Message</button>
             </form>
         </div>
