--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png">
 
-    <title>Welcome to Tutor</title>
+    <title>Home | Tutor</title>
 </head>
 
 <body>
