--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Landing page for a course creation platform." />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tutor-zeta.vercel.app/" />
+    <meta property="og:title" content="Home | Tutor" />
+    <meta property="og:description" content="Landing page for a course creation platform." />
+    <meta property="og:image" content="https://tutor-zeta.vercel.app/images/showcase.png" />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://tutor-zeta.vercel.app/" />
+    <meta property="twitter:title" content="Home | Tutor" />
+    <meta property="twitter:description" content="Landing page for a course creation platform." />
+    <meta property="twitter:image" content="https://tutor-zeta.vercel.app/images/showcase.png" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
